# targetted-native-hooking

./: AndroidManifest.xml  BUILD-GUIDE.md  CMakeLists.txt  ClashRoyaleBypassNative.java  ENABLE-AND-TEST.md  INSTALLATION-GUIDE.md  MODULE-STATUS.md  MODULE-TECHNIQUES.md  QUICK-BUILD-GUIDE.md  README.md  build-simple.sh  build.gradle  clash_bypass.cpp  enable-module.sh  gradle.properties  local.properties  settings.gradle  setup-project.sh  test-module.sh
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: clash_bypass.cpp  native_hook.h
app/src/main/java/com/xposed/clashroyalebypass/: ClashRoyaleBypassNative.java  MainHook.kt  XposedInit.java
app/src/main/res/values/: arrays.xml
assets/: xposed_init
